Revert "Ajustes finais e correções"
This reverts commit c5df3ffcea4b25e988dde276e15588990b8b6b86.